# typodoo

./: LICENSE.txt  README.md  _todoo.pth  pyproject.toml  typodoo.py  typodoo_activate.pth
tests/: __init__.py
tests/typodoo_addons/demo1/: __manifest__.py
tests/typodoo_addons/demo1/models/: __init__.py  res_partner.py  thing.py
tests/typodoo_addons/demo1/tests/: __init__.py  test_thing.py
todoo/: __init__.py
