[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "typodoo"
description = 'Towards idiomatic Python with types for the Odoo ORM'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Stéphane Bidoul", email = "stephane.bidoul@acsone.eu" },
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Framework :: Odoo",
]
dependencies = ["wrapt"]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/sbidoul/typodoo#readme"
Issues = "https://github.com/sbidoul/typodoo/issues"
Source = "https://github.com/sbidoul/typodoo"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build]
include = ["typodoo_activate.pth", "typodoo.py"]
# TODO add typodoo_activate.pth to editable wheel?
dev-mode-dirs = ["."]

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=typodoo --cov=tests"
no-cov = "cov --no-cov"

[[tool.hatch.envs.test.matrix]]
python = ["36", "37", "38", "39", "310"]

[tool.coverage.run]
branch = true
parallel = true
omit = []

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
